test_regress/t/t_pp_line_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2019 by Wilson Snyder.
// SPDX-License-Identifier: CC0-1.0

`line
`line 100
`line 200 somefile
`line 300 "somefile 1
`line 400 "some file"
`line 500 "somefile" 3
`line 600 "some file" 3
